--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -299,7 +299,7 @@ jobs:
           name: linux-build-artifact
           path: bin
       - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -oMax -display-off
+        run: bin/Mosa.Utility.UnitTests.exe -oMax -display-off
 
   linux-unit-testing-oNone:
     name: Linux Testing -oNone
@@ -316,7 +316,7 @@ jobs:
           name: linux-build-artifact
           path: bin
       - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -oNone -display-off
+        run: bin/Mosa.Utility.UnitTests.exe -oNone -display-off
 
   linux-unit-testing-o1:
     name: Linux Testing -o1
@@ -333,7 +333,7 @@ jobs:
           name: linux-build-artifact
           path: bin
       - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o1 -display-off
+        run: bin/Mosa.Utility.UnitTests.exe -o1 -display-off
 
   linux-unit-testing-o2:
     name: Linux Testing -o2
@@ -350,7 +350,7 @@ jobs:
           name: linux-build-artifact
           path: bin
       - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o2 -display-off
+        run: bin/Mosa.Utility.UnitTests.exe -o2 -display-off
 
   linux-unit-testing-o3:
     name: Linux Testing -o3
@@ -367,7 +367,7 @@ jobs:
           name: linux-build-artifact
           path: bin
       - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o3 -display-off
+        run: bin/Mosa.Utility.UnitTests.exe -o3 -display-off
 
   linux-unit-testing-o4:
     name: Linux Testing -o4
@@ -384,7 +384,7 @@ jobs:
           name: linux-build-artifact
           path: bin
       - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o4 -display-off
+        run: bin/Mosa.Utility.UnitTests.exe -o4 -display-off
 
   linux-unit-testing-o5:
     name: Linux Testing -o5
@@ -401,7 +401,7 @@ jobs:
           name: linux-build-artifact
           path: bin
       - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o5 -display-off
+        run: bin/Mosa.Utility.UnitTests.exe -o5 -display-off
 
   linux-unit-testing-o6:
     name: Linux Testing -o6
@@ -418,7 +418,7 @@ jobs:
           name: linux-build-artifact
           path: bin
       - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o6 -display-off
+        run: bin/Mosa.Utility.UnitTests.exe -o6 -display-off
 
   linux-unit-testing-o7:
     name: Linux Testing -o7
@@ -435,7 +435,7 @@ jobs:
           name: linux-build-artifact
           path: bin
       - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o7 -display-off
+        run: bin/Mosa.Utility.UnitTests.exe -o7 -display-off
 
   linux-unit-testing-o8:
     name: Linux Testing -o8
@@ -452,4 +452,4 @@ jobs:
           name: linux-build-artifact
           path: bin
       - name: Unit Testing
-        run: bin\Mosa.Utility.UnitTests.exe -o8 -display-off
+        run: bin/Mosa.Utility.UnitTests.exe -o8 -display-off
